admin page added

--- a/src/main/webapp/response_view.xhtml
+++ b/src/main/webapp/response_view.xhtml
@@ -19,18 +19,18 @@
 		
 		<br/><hr/><br/>
 		
-		Adayın Tam İsmi: #{registration.firstName} #{registration.lastName}
+		Adayın Tam İsmi: #{app.firstName} #{app.lastName}
 		
 		<br/>
 		
-		Doğum Günü: #{registration.birthday}
+		Doğum Günü: #{app.birthday}
 		
 		<br/>
 		
-		Üniversite: #{registration.university}
+		Üniversite: #{app.university}
 		
 		<br/>
 		
-		Adres: #{registration.address} 
+		Adres: #{app.address} 
 	</h:body>
 </html>
