switched to myfaces, added redirect to details page

--- a/src/main/webapp/response_view.xhtml
+++ b/src/main/webapp/response_view.xhtml
@@ -15,7 +15,7 @@
 		<title> Başvurunu Görüntüle </title>
 	</h:head>
 	<h:body>
-		Başvurunuz gönderildi!
+		Başvurunuz aşağıdaki bilgilerle işleme alınmıştır.
 		
 		<br/><hr/><br/>
 		
