--- a/src/main/webapp/positive_response_view.xhtml
+++ b/src/main/webapp/positive_response_view.xhtml
@@ -12,25 +12,11 @@
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
 	<h:head>
-		<title> Başvurunu Görüntüle </title>
+		<title> Başvuru Detayı </title>
 	</h:head>
 	<h:body>
-		Başvurunuz aşağıdaki bilgilerle işleme alınmıştır.
-		
+		<br/>
+		<h2>Başvurunuz işleme alınmıştır.</h2>
 		<br/><hr/><br/>
-		
-		Adayın Tam İsmi: #{app.firstName} #{app.lastName}
-		
-		<br/>
-		
-		Doğum Günü: #{app.birthday}
-		
-		<br/>
-		
-		Üniversite: #{app.university}
-		
-		<br/>
-		
-		Adres: #{app.address} 
 	</h:body>
 </html>
