--- a/src/main/webapp/application_details.xhtml
+++ b/src/main/webapp/application_details.xhtml
@@ -16,13 +16,13 @@
 	</h:head>
 	<h:body>
 		<h1>Burs Detayları</h1>
-		<table cellspacing="10%">
+		<table cellspacing="10%" style="font-size: 1.2em">
 			<tr>
 				<td>İsim Soyisim:</td>
 				<td>#{app_coll.current.toListEntry()}</td>
 			</tr>
 			<tr>
-				<td>Doğum Tarihi</td>
+				<td>Doğum Tarihi:</td>
 				<td>#{app_coll.current.birthday}</td>
 			</tr>
 			<tr>
